--- a/examples/gen/display-number.html
+++ b/examples/gen/display-number.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Example: Lookup user's country</title>
+    <title>Example: Display an existing number</title>
     <link rel="stylesheet" href="../css/prism.css">
     <link rel="stylesheet" href="../../build/css/intlTelInput.css?1537717752654">
     <link rel="stylesheet" href="../../build/css/demo.css?1537717752654">
@@ -22,37 +22,28 @@
 
   <body>
     <a href="/">Back</a>
-    <h1>Example: Lookup user's country</h1>
-    <p>Set initialCountry to 'auto' and pass in a function for geoIpLookup to perform a JSONP request to ipinfo.io, which returns the user's country based on their IP address.</p>
+    <h1>Example: Display an existing number</h1>
+    <p>We initialise the plugin on an input which already contains a full international number. The plugin will automatically select the relevant flag, and re-format the number to national format.</p>
 
     <h2>Markup</h2>
-    <pre><code class="language-markup">&lt;script src=&quot;//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js&quot;&gt;&lt;/script&gt;
-&lt;input id=&quot;phone&quot; type=&quot;tel&quot;&gt;
+    <pre><code class="language-markup">&lt;input id=&quot;phone&quot; type=&quot;tel&quot; value=&quot;+447733312345&quot;&gt;
 </code></pre>
 
     <h2>Code</h2>
     <pre><code class="language-javascript">var input = document.querySelector(&quot;#phone&quot;);
 window.intlTelInput(input, {
-  initialCountry: &quot;auto&quot;,
-  geoIpLookup: function(callback) {
-    $.get(&#39;https://ipinfo.io&#39;, function() {}, &quot;jsonp&quot;).always(function(resp) {
-      var countryCode = (resp &amp;&amp; resp.country) ? resp.country : &quot;&quot;;
-      callback(countryCode);
-    });
-  },
   utilsScript: &quot;../../build/js/utils.js?1537717752654&quot; // just for formatting/placeholders etc
 });
 </code></pre>
 
     <h2>Result</h2>
     <div id="result">
-      <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<input id="phone" type="tel">
+      <input id="phone" type="tel" value="+447733312345">
 
     </div>
 
     <script src="../js/prism.js"></script>
     <script src="../../build/js/intlTelInput.js?1537717752654"></script>
-    <script src="./js/defaultCountryIp.js?1537717752654"></script>
+    <script src="./js/displayNumber.js?1537717752654"></script>
   </body>
 </html>
