--- a/examples/gen/is-valid-number.html
+++ b/examples/gen/is-valid-number.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <title>Example: Validation</title>
     <link rel="stylesheet" href="../css/prism.css">
-    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1537705480435">
-    <link rel="stylesheet" href="../../build/css/demo.css?1537705480435">
+    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1537717752654">
+    <link rel="stylesheet" href="../../build/css/demo.css?1537717752654">
     
-      <link rel="stylesheet" href="../css/isValidNumber.css?1537705480435">
+      <link rel="stylesheet" href="../css/isValidNumber.css?1537717752654">
     
 
     <!-- GOOGLE ANALYTICS -->
@@ -25,25 +25,30 @@
   <body>
     <a href="/">Back</a>
     <h1>Example: Validation</h1>
-    <p>Use public isValidNumber method (utilising Google's libphonenumber) to validate the telephone number on the change event.</p>
+    <p>Use the isValidNumber method (which utilises Google's libphonenumber) to validate the telephone number on the blur event.</p>
 
     <h2>Markup</h2>
     <pre><code class="language-markup">&lt;input id=&quot;phone&quot; type=&quot;tel&quot;&gt;
 &lt;span id=&quot;valid-msg&quot; class=&quot;hide&quot;&gt;✓ Valid&lt;/span&gt;
-&lt;span id=&quot;error-msg&quot; class=&quot;hide&quot;&gt;Invalid number&lt;/span&gt;</code></pre>
+&lt;span id=&quot;error-msg&quot; class=&quot;hide&quot;&gt;&lt;/span&gt;
+</code></pre>
 
     <h2>Code</h2>
     <pre><code class="language-javascript">var input = document.querySelector(&quot;#phone&quot;),
   errorMsg = document.querySelector(&quot;#error-msg&quot;),
   validMsg = document.querySelector(&quot;#valid-msg&quot;);
 
+// here, the index maps to the error code returned from getValidationError - see readme
+var errorMap = [ &quot;Invalid number&quot;, &quot;Invalid country code&quot;, &quot;Too short&quot;, &quot;Too long&quot;, &quot;Invalid number&quot;];
+
 // initialise plugin
 var iti = window.intlTelInput(input, {
-  utilsScript: &quot;../../build/js/utils.js?1537705480435&quot;
+  utilsScript: &quot;../../build/js/utils.js?1537717752654&quot;
 });
 
 var reset = function() {
   input.classList.remove(&quot;error&quot;);
+  errorMsg.innerHTML = &quot;&quot;;
   errorMsg.classList.add(&quot;hide&quot;);
   validMsg.classList.add(&quot;hide&quot;);
 };
@@ -56,6 +61,8 @@ input.addEventListener(&#39;blur&#39;, function() {
       validMsg.classList.remove(&quot;hide&quot;);
     } else {
       input.classList.add(&quot;error&quot;);
+      var errorCode = iti.getValidationError();
+      errorMsg.innerHTML = errorMap[errorCode];
       errorMsg.classList.remove(&quot;hide&quot;);
     }
   }
@@ -70,11 +77,12 @@ input.addEventListener(&#39;keyup&#39;, reset);
     <div id="result">
       <input id="phone" type="tel">
 <span id="valid-msg" class="hide">✓ Valid</span>
-<span id="error-msg" class="hide">Invalid number</span>
+<span id="error-msg" class="hide"></span>
+
     </div>
 
     <script src="../js/prism.js"></script>
-    <script src="../../build/js/intlTelInput.js?1537705480435"></script>
-    <script src="./js/isValidNumber.js?1537705480435"></script>
+    <script src="../../build/js/intlTelInput.js?1537717752654"></script>
+    <script src="./js/isValidNumber.js?1537717752654"></script>
   </body>
 </html>
