fix build minified css

--- a/demo.html
+++ b/demo.html
@@ -38,7 +38,7 @@
       // onlyCountries: ['us', 'gb', 'ch', 'ca', 'do'],
       // placeholderNumberType: "MOBILE",
       // preferredCountries: ['cn', 'jp'],
-      separateDialCode: true,
+      // separateDialCode: true,
       utilsScript: "build/js/utils.js",
     });
   </script>
