--- a/examples/gen/default-country-ip.html
+++ b/examples/gen/default-country-ip.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Example: Lookup user's country</title>
     <link rel="stylesheet" href="../css/prism.css">
-    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1590403638580">
-    <link rel="stylesheet" href="../../build/css/demo.css?1590403638580">
+    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1603274336113">
+    <link rel="stylesheet" href="../../build/css/demo.css?1603274336113">
     
 
     <!-- GOOGLE ANALYTICS -->
@@ -36,11 +36,11 @@ window.intlTelInput(input, {
   initialCountry: &quot;auto&quot;,
   geoIpLookup: function(callback) {
     $.get(&#39;https://ipinfo.io&#39;, function() {}, &quot;jsonp&quot;).always(function(resp) {
-      var countryCode = (resp &amp;&amp; resp.country) ? resp.country : &quot;&quot;;
+      var countryCode = (resp &amp;&amp; resp.country) ? resp.country : &quot;us&quot;;
       callback(countryCode);
     });
   },
-  utilsScript: &quot;../../build/js/utils.js?1590403638580&quot; // just for formatting/placeholders etc
+  utilsScript: &quot;../../build/js/utils.js?1603274336113&quot; // just for formatting/placeholders etc
 });
 </code></pre>
 
@@ -52,7 +52,7 @@ window.intlTelInput(input, {
     </div>
 
     <script src="../js/prism.js"></script>
-    <script src="../../build/js/intlTelInput.js?1590403638580"></script>
-    <script src="./js/defaultCountryIp.js?1590403638580"></script>
+    <script src="../../build/js/intlTelInput.js?1603274336113"></script>
+    <script src="./js/defaultCountryIp.js?1603274336113"></script>
   </body>
 </html>
