Fix some a11y issues

--- a/demo.html
+++ b/demo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
 
 <head>
   <meta charset="utf-8">
@@ -11,7 +11,7 @@
 <body>
   <h1>International Telephone Input</h1>
   <form>
-    <input id="phone" name="phone" type="tel">
+    <input id="phone" name="phone" type="tel" aria-label="Enter a phone number">
     <button type="submit">Submit</button>
   </form>
 
