--- a/examples/gen/country-sync.html
+++ b/examples/gen/country-sync.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>Example: Country sync</title>
     <link rel="stylesheet" href="../css/prism.css">
     <link rel="stylesheet" href="../../build/css/intlTelInput.css?1638200991544">
     <link rel="stylesheet" href="../../build/css/demo.css?1638200991544">
-    
+
       <link rel="stylesheet" href="../css/countrySync.css?1638200991544">
-    
+
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-N472J4QKC4"></script>
@@ -78,7 +78,7 @@ addressDropdown.addEventListener(&#39;change&#39;, function() {
     <div id="result">
       <div class="form-item">
   <label>Telephone number</label>
-  <input id="phone" type="tel">
+  <input id="phone" type="tel" aria-label="Enter a phone number">
 </div>
 
 <div class="form-item">
