--- a/examples/gen/multiple-instances.html
+++ b/examples/gen/multiple-instances.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>Example: Multiple Instances</title>
     <link rel="stylesheet" href="../css/prism.css">
     <link rel="stylesheet" href="../../build/css/intlTelInput.css?1638200991544">
     <link rel="stylesheet" href="../../build/css/demo.css?1638200991544">
-    
+
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-N472J4QKC4"></script>
@@ -47,9 +47,9 @@ window.intlTelInput(inputMobile, {
 
     <h2>Result</h2>
     <div id="result">
-      Home: <input id="home" type="tel">
+      Home: <input id="home" type="tel" aria-label="Enter a phone number">
 <br><br>
-Mobile: <input id="mobile" type="tel">
+Mobile: <input id="mobile" type="tel" aria-label="Enter a phone number">
 
     </div>
 
