--- a/examples/gen/only-countries-europe.html
+++ b/examples/gen/only-countries-europe.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>Example: European countries</title>
     <link rel="stylesheet" href="../css/prism.css">
     <link rel="stylesheet" href="../../build/css/intlTelInput.css?1638200991544">
     <link rel="stylesheet" href="../../build/css/demo.css?1638200991544">
-    
+
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-N472J4QKC4"></script>
@@ -39,7 +39,7 @@ window.intlTelInput(input, {
 
     <h2>Result</h2>
     <div id="result">
-      <input id="phone" type="tel">
+      <input id="phone" type="tel" aria-label="Enter a phone number">
     </div>
 
     <script src="../js/prism.js"></script>
