--- a/examples/gen/display-number.html
+++ b/examples/gen/display-number.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>Example: Display an existing number</title>
     <link rel="stylesheet" href="../css/prism.css">
     <link rel="stylesheet" href="../../build/css/intlTelInput.css?1638200991544">
     <link rel="stylesheet" href="../../build/css/demo.css?1638200991544">
-    
+
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-N472J4QKC4"></script>
@@ -36,7 +36,7 @@ window.intlTelInput(input, {
 
     <h2>Result</h2>
     <div id="result">
-      <input id="phone" type="tel" value="+447733312345">
+      <input id="phone" type="tel" aria-label="Enter a phone number" value="+447733312345">
 
     </div>
 
