--- a/examples/gen/hidden-input.html
+++ b/examples/gen/hidden-input.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>Example: Submitting the full international number using a hidden input</title>
     <link rel="stylesheet" href="../css/prism.css">
     <link rel="stylesheet" href="../../build/css/intlTelInput.css?1638200991544">
     <link rel="stylesheet" href="../../build/css/demo.css?1638200991544">
-    
+
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-N472J4QKC4"></script>
@@ -41,7 +41,7 @@ window.intlTelInput(input, {
     <h2>Result</h2>
     <div id="result">
       <form>
-  <input id="phone" type="tel" name="phone">
+  <input id="phone" type="tel" aria-label="Enter a phone number" name="phone">
   <button type="submit">Submit</button>
 </form>
 
