--- a/examples/gen/init-promise.html
+++ b/examples/gen/init-promise.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>Example: Using the promise returned from initialisation</title>
     <link rel="stylesheet" href="../css/prism.css">
     <link rel="stylesheet" href="../../build/css/intlTelInput.css?1638200991544">
     <link rel="stylesheet" href="../../build/css/demo.css?1638200991544">
-    
+
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-N472J4QKC4"></script>
@@ -25,7 +25,7 @@
 
     <h2>Markup</h2>
     <pre><code class="language-markup">&lt;!-- polyfill for IE11 --&gt;
-&lt;script src=&quot;https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.auto.js&quot;&gt;&lt;/script&gt; 
+&lt;script src=&quot;https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.auto.js&quot;&gt;&lt;/script&gt;
 
 &lt;p&gt;
   Status:
@@ -49,13 +49,13 @@ iti.promise.then(function() {
     <h2>Result</h2>
     <div id="result">
       <!-- polyfill for IE11 -->
-<script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.auto.js"></script> 
+<script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.auto.js"></script>
 
 <p>
   Status:
   <span id="status">Initialising...</span>
 </p>
-<input id="phone" type="tel">
+<input id="phone" type="tel" aria-label="Enter a phone number">
 
     </div>
 
