--- a/examples/gen/is-valid-number.html
+++ b/examples/gen/is-valid-number.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>Example: Validation</title>
     <link rel="stylesheet" href="../css/prism.css">
     <link rel="stylesheet" href="../../build/css/intlTelInput.css?1638200991544">
     <link rel="stylesheet" href="../../build/css/demo.css?1638200991544">
-    
+
       <link rel="stylesheet" href="../css/isValidNumber.css?1638200991544">
-    
+
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-N472J4QKC4"></script>
@@ -73,7 +73,7 @@ input.addEventListener(&#39;keyup&#39;, reset);
 
     <h2>Result</h2>
     <div id="result">
-      <input id="phone" type="tel">
+      <input id="phone" type="tel" aria-label="Enter a phone number">
 <span id="valid-msg" class="hide">✓ Valid</span>
 <span id="error-msg" class="hide"></span>
 
