--- a/examples/gen/national-mode.html
+++ b/examples/gen/national-mode.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>Example: National Mode</title>
     <link rel="stylesheet" href="../css/prism.css">
     <link rel="stylesheet" href="../../build/css/intlTelInput.css?1638200991544">
     <link rel="stylesheet" href="../../build/css/demo.css?1638200991544">
-    
+
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-N472J4QKC4"></script>
@@ -52,7 +52,7 @@ input.addEventListener(&#39;keyup&#39;, handleChange);
     <h2>Result</h2>
     <div id="result">
       <p id="output">Please enter a valid number below</p>
-<input id="phone" type="tel">
+<input id="phone" type="tel" aria-label="Enter a phone number">
 
     </div>
 
