--- a/spec.html
+++ b/spec.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en" dir="ltr">
 <head>
   <meta charset="utf-8">
   <title>Jasmine Spec Runner</title>
@@ -13,101 +13,101 @@
 </head>
 <body>
 
-  
+
   <script src=".grunt/grunt-contrib-jasmine/jasmine.js"></script>
-  
+
   <script src=".grunt/grunt-contrib-jasmine/jasmine-html.js"></script>
-  
+
   <script src=".grunt/grunt-contrib-jasmine/json2.js"></script>
-  
+
   <script src=".grunt/grunt-contrib-jasmine/boot.js"></script>
-  
+
   <script src="node_modules/jquery/dist/jquery.js"></script>
-  
+
   <script src="node_modules/jasmine-jquery/lib/jasmine-jquery.js"></script>
-  
+
   <script src="src/spec/helpers/helpers.js"></script>
-  
+
   <script src="src/js/data.js"></script>
-  
+
   <script src="build/js/intlTelInput.min.js"></script>
-  
+
   <script src="build/js/utils.js"></script>
-  
+
   <script src="src/spec/tests/core/closecountrydropdownEvent.js"></script>
-  
+
   <script src="src/spec/tests/core/countrychangeEvent.js"></script>
-  
+
   <script src="src/spec/tests/core/dropdownShortcuts.js"></script>
-  
+
   <script src="src/spec/tests/core/initialValues.js"></script>
-  
+
   <script src="src/spec/tests/core/multipleInstances.js"></script>
-  
+
   <script src="src/spec/tests/core/usingDropdown.js"></script>
-  
+
   <script src="src/spec/tests/core/usingInput.js"></script>
-  
+
   <script src="src/spec/tests/methods/destroy.js"></script>
-  
+
   <script src="src/spec/tests/methods/getExtension.js"></script>
-  
+
   <script src="src/spec/tests/methods/getNumber.js"></script>
-  
+
   <script src="src/spec/tests/methods/getNumberType.js"></script>
-  
+
   <script src="src/spec/tests/methods/getSelectedCountryData.js"></script>
-  
+
   <script src="src/spec/tests/methods/getValidationError.js"></script>
-  
+
   <script src="src/spec/tests/methods/isValidNumber.js"></script>
-  
+
   <script src="src/spec/tests/methods/setCountry.js"></script>
-  
+
   <script src="src/spec/tests/methods/setNumber.js"></script>
-  
+
   <script src="src/spec/tests/methods/setPlaceholderNumberType.js"></script>
-  
+
   <script src="src/spec/tests/options/allowDropdown.js"></script>
-  
+
   <script src="src/spec/tests/options/autoHideDialCode.js"></script>
-  
+
   <script src="src/spec/tests/options/autoPlaceholder.js"></script>
-  
+
   <script src="src/spec/tests/options/customContainer.js"></script>
-  
+
   <script src="src/spec/tests/options/customPlaceholder.js"></script>
-  
+
   <script src="src/spec/tests/options/dropdownContainer.js"></script>
-  
+
   <script src="src/spec/tests/options/excludeCountries.js"></script>
-  
+
   <script src="src/spec/tests/options/formatOnDisplay.js"></script>
-  
+
   <script src="src/spec/tests/options/geoIpLookup.js"></script>
-  
+
   <script src="src/spec/tests/options/initialCountry.js"></script>
-  
+
   <script src="src/spec/tests/options/nationalMode.js"></script>
-  
+
   <script src="src/spec/tests/options/onlyCountries.js"></script>
-  
+
   <script src="src/spec/tests/options/placeholderNumberType.js"></script>
-  
+
   <script src="src/spec/tests/options/preferredCountries.js"></script>
-  
+
   <script src="src/spec/tests/options/separateDialCode.js"></script>
-  
+
   <script src="src/spec/tests/options/utilsScript.js"></script>
-  
+
   <script src="src/spec/tests/static/defaults.js"></script>
-  
+
   <script src="src/spec/tests/static/getCountryData.js"></script>
-  
+
   <script src="src/spec/tests/static/loadUtils.js"></script>
-  
+
   <script src=".grunt/grunt-contrib-jasmine/reporter.js"></script>
-  
+
 
 </body>
 </html>
