Rename autoHideDialCode to autoInsertDialCode and clear up

--- a/demo.html
+++ b/demo.html
@@ -20,7 +20,7 @@
     var input = document.querySelector("#phone");
     window.intlTelInput(input, {
       // allowDropdown: false,
-      // autoHideDialCode: false,
+      // autoInsertDialCode: true,
       // autoPlaceholder: "off",
       // dropdownContainer: document.body,
       // excludeCountries: ["us"],
