--- a/demo_rtl.html
+++ b/demo_rtl.html
@@ -20,7 +20,7 @@
     var input = document.querySelector("#phone");
     window.intlTelInput(input, {
       // allowDropdown: false,
-      // autoHideDialCode: false,
+      // autoInsertDialCode: false,
       // autoPlaceholder: "off",
       // dropdownContainer: document.body,
       // excludeCountries: ["us"],
