--- a/demo.html
+++ b/demo.html
@@ -25,11 +25,11 @@
       // dropdownContainer: document.body,
       // excludeCountries: ["us"],
       // formatOnDisplay: false,
-      // geoIpLookup: callback => {
+      // geoIpLookup: function(callback) {
       //   fetch("http://ip-api.com/json")
-      //     .then(res => res.json())
-      //     .then(data => callback(data.countryCode))
-      //     .catch(() => callback("us"));
+      //     .then(function(res) { return res.json(); })
+      //     .then(function(data) { callback(data.countryCode); })
+      //     .catch(function() { callback("us"); });
       // },
       // hiddenInput: "full_number",
       // initialCountry: "auto",
