--- a/examples/gen/default-country-ip.html
+++ b/examples/gen/default-country-ip.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Example: Lookup user's country</title>
     <link rel="stylesheet" href="../css/prism.css">
-    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1680950494824">
-    <link rel="stylesheet" href="../../build/css/demo.css?1680950494824">
+    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1680992740399">
+    <link rel="stylesheet" href="../../build/css/demo.css?1680992740399">
     
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -25,8 +25,8 @@
 
     <h2>Markup</h2>
     <pre><code class="language-markup">&lt;!-- fetch and Promise polyfills for IE11 --&gt;
-&lt;script src=&quot;https://cdnjs.cloudflare.com/ajax/libs/fetch/3.6.2/fetch.min.js&quot;&gt;&lt;/script&gt;
 &lt;script src=&quot;https://cdn.jsdelivr.net/npm/promise-polyfill@8/dist/polyfill.min.js&quot;&gt;&lt;/script&gt;
+&lt;script src=&quot;https://cdn.jsdelivr.net/npm/whatwg-fetch@3.6.2/dist/fetch.umd.min.js&quot;&gt;&lt;/script&gt;
 
 &lt;input id=&quot;phone&quot; type=&quot;tel&quot;&gt;
 </code></pre>
@@ -41,22 +41,22 @@ window.intlTelInput(input, {
       .then(function(data) { callback(data.countryCode); })
       .catch(function() { callback(&quot;us&quot;); });
   },
-  utilsScript: &quot;../../build/js/utils.js?1680950494824&quot; // just for formatting/placeholders etc
+  utilsScript: &quot;../../build/js/utils.js?1680992740399&quot; // just for formatting/placeholders etc
 });
 </code></pre>
 
     <h2>Result</h2>
     <div id="result">
       <!-- fetch and Promise polyfills for IE11 -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/3.6.2/fetch.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/promise-polyfill@8/dist/polyfill.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/whatwg-fetch@3.6.2/dist/fetch.umd.min.js"></script>
 
 <input id="phone" type="tel">
 
     </div>
 
     <script src="../js/prism.js"></script>
-    <script src="../../build/js/intlTelInput.js?1680950494824"></script>
-    <script src="./js/defaultCountryIp.js?1680950494824"></script>
+    <script src="../../build/js/intlTelInput.js?1680992740399"></script>
+    <script src="./js/defaultCountryIp.js?1680992740399"></script>
   </body>
 </html>
