--- a/demo.html
+++ b/demo.html
@@ -26,9 +26,9 @@
       // excludeCountries: ["us"],
       // formatOnDisplay: false,
       // geoIpLookup: function(callback) {
-      //   fetch("http://ip-api.com/json")
+      //   fetch("https://ipapi.co/json")
       //     .then(function(res) { return res.json(); })
-      //     .then(function(data) { callback(data.countryCode); })
+      //     .then(function(data) { callback(data.country_code); })
       //     .catch(function() { callback("us"); });
       // },
       // hiddenInput: "full_number",
