--- a/demo.html
+++ b/demo.html
@@ -1,48 +1,46 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>International Telephone Input</title>
+    <link rel="stylesheet" href="build/css/intlTelInput.css" />
+    <link rel="stylesheet" href="build/css/demo.css" />
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <title>International Telephone Input</title>
-  <link rel="stylesheet" href="build/css/intlTelInput.css">
-  <link rel="stylesheet" href="build/css/demo.css">
-</head>
+  <body>
+    <h1>International Telephone Input</h1>
+    <form>
+      <input id="phone" name="phone" type="tel" />
+      <button type="submit">Submit</button>
+    </form>
 
-<body>
-  <h1>International Telephone Input</h1>
-  <form>
-    <input id="phone" name="phone" type="tel">
-    <button type="submit">Submit</button>
-  </form>
-
-  <script src="build/js/intlTelInput.js"></script>
-  <script>
-    var input = document.querySelector("#phone");
-    window.intlTelInput(input, {
-      allowDropdown: false,
-      // autoInsertDialCode: true,
-      // autoPlaceholder: "off",
-      // dropdownContainer: document.body,
-      // excludeCountries: ["us"],
-      // formatOnDisplay: false,
-      // geoIpLookup: function(callback) {
-      //   fetch("https://ipapi.co/json")
-      //     .then(function(res) { return res.json(); })
-      //     .then(function(data) { callback(data.country_code); })
-      //     .catch(function() { callback("us"); });
-      // },
-      // hiddenInput: "full_number",
-      // initialCountry: "auto",
-      // localizedCountries: { 'de': 'Deutschland' },
-      // nationalMode: false,
-      // onlyCountries: ['us', 'gb', 'ch', 'ca', 'do'],
-      // placeholderNumberType: "MOBILE",
-      // preferredCountries: ['cn', 'jp'],
-      // separateDialCode: true,
-      showFlags: false,
-      utilsScript: "build/js/utils.js",
-    });
-  </script>
-</body>
-
+    <script src="build/js/intlTelInput.js"></script>
+    <script>
+      var input = document.querySelector("#phone");
+      window.intlTelInput(input, {
+        allowDropdown: false,
+        // autoInsertDialCode: true,
+        // autoPlaceholder: "off",
+        // dropdownContainer: document.body,
+        // excludeCountries: ["us"],
+        // formatOnDisplay: false,
+        // geoIpLookup: function(callback) {
+        //   fetch("https://ipapi.co/json")
+        //     .then(function(res) { return res.json(); })
+        //     .then(function(data) { callback(data.country_code); })
+        //     .catch(function() { callback("us"); });
+        // },
+        // hiddenInput: "full_number",
+        // initialCountry: "auto",
+        // localizedCountries: { 'de': 'Deutschland' },
+        // nationalMode: false,
+        // onlyCountries: ['us', 'gb', 'ch', 'ca', 'do'],
+        // placeholderNumberType: "MOBILE",
+        // preferredCountries: ['cn', 'jp'],
+        // separateDialCode: true,
+        showFlags: false,
+        utilsScript: "build/js/utils.js"
+      });
+    </script>
+  </body>
 </html>
