--- a/demo_rtl.html
+++ b/demo_rtl.html
@@ -1,27 +1,25 @@
 <!DOCTYPE html>
-<html dir="rtl">
+<html dir="rtl" lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>International Telephone Input</title>
+    <link rel="stylesheet" href="build/css/intlTelInput.css" />
+    <link rel="stylesheet" href="build/css/demo.css" />
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <title>International Telephone Input</title>
-  <link rel="stylesheet" href="build/css/intlTelInput.css">
-  <link rel="stylesheet" href="build/css/demo.css">
-</head>
+  <body>
+    <h1>International Telephone Input</h1>
+    <form>
+      <input id="phone" name="phone" type="tel" />
+      <button type="submit">Submit</button>
+    </form>
 
-<body>
-  <h1>International Telephone Input</h1>
-  <form>
-    <input id="phone" name="phone" type="tel">
-    <button type="submit">Submit</button>
-  </form>
-
-  <script src="build/js/intlTelInput.js"></script>
-  <script>
-    var input = document.querySelector("#phone");
-    window.intlTelInput(input, {
-      utilsScript: "build/js/utils.js",
-    });
-  </script>
-</body>
-
+    <script src="build/js/intlTelInput.js"></script>
+    <script>
+      var input = document.querySelector("#phone");
+      window.intlTelInput(input, {
+        utilsScript: "build/js/utils.js"
+      });
+    </script>
+  </body>
 </html>
