--- a/demo.html
+++ b/demo.html
@@ -18,7 +18,7 @@
     <script>
       var input = document.querySelector("#phone");
       window.intlTelInput(input, {
-        allowDropdown: false,
+        // allowDropdown: false,
         // autoInsertDialCode: true,
         // autoPlaceholder: "off",
         // dropdownContainer: document.body,
@@ -38,7 +38,7 @@
         // placeholderNumberType: "MOBILE",
         // preferredCountries: ['cn', 'jp'],
         // separateDialCode: true,
-        showFlags: false,
+        // showFlags: false,
         utilsScript: "build/js/utils.js"
       });
     </script>
