--- a/demo.html
+++ b/demo.html
@@ -39,6 +39,7 @@
         // preferredCountries: ['cn', 'jp'],
         // separateDialCode: true,
         // showFlags: false,
+        // searchCountry: true,
         utilsScript: "build/js/utils.js"
       });
     </script>
