New option: fixDropdownWidth

--- a/demo.html
+++ b/demo.html
@@ -23,6 +23,7 @@
         // autoPlaceholder: "off",
         // dropdownContainer: document.body,
         // excludeCountries: ["us"],
+        // fixDropdownWidth: false,
         // formatOnDisplay: false,
         // geoIpLookup: function(callback) {
         //   fetch("https://ipapi.co/json")
