--- a/demo.html
+++ b/demo.html
@@ -21,9 +21,14 @@
         // allowDropdown: false,
         // autoInsertDialCode: true,
         // autoPlaceholder: "off",
+        // countrySearch: true,
+        // customContainer: "test",
+        // customPlaceholder: function(selectedCountryPlaceholder, selectedCountryData) {
+        //   return "e.g. " + selectedCountryPlaceholder;
+        // },
         // dropdownContainer: document.querySelector('#custom-container'),
         // excludeCountries: ["us"],
-        // fixDropdownWidth: false,
+        // fixDropdownWidth: true,
         // formatOnDisplay: false,
         // geoIpLookup: function(callback) {
         //   fetch("https://ipapi.co/json")
