Move fullscreen class to the dropdownContainer

--- a/demo.html
+++ b/demo.html
@@ -21,7 +21,7 @@
         // allowDropdown: false,
         // autoInsertDialCode: true,
         // autoPlaceholder: "off",
-        // dropdownContainer: document.body,
+        // dropdownContainer: document.querySelector('#custom-container'),
         // excludeCountries: ["us"],
         // fixDropdownWidth: false,
         // formatOnDisplay: false,
