Allow country search in fullscreen popup

--- a/demo.html
+++ b/demo.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>International Telephone Input</title>
     <link rel="stylesheet" href="build/css/intlTelInput.css" />
     <link rel="stylesheet" href="build/css/demo.css" />
