--- a/demo.html
+++ b/demo.html
@@ -37,7 +37,9 @@
         //     .then(function(data) { callback(data.country_code); })
         //     .catch(function() { callback("us"); });
         // },
-        // hiddenInput: "full_number",
+        // hiddenInput: (telInputName) => {
+        //   return telInputName + "_hidden";
+        // },
         // initialCountry: "auto",
         // localizedCountries: { 'de': 'Deutschland' },
         // nationalMode: false,
