--- a/demo.html
+++ b/demo.html
@@ -37,11 +37,9 @@
         //     .then(function(data) { callback(data.country_code); })
         //     .catch(function() { callback("us"); });
         // },
-        // hiddenInput: (telInputName) => {
-        //   return telInputName + "_hidden";
-        // },
+        // hiddenInput: () => "phone_full",
+        // i18n: { 'de': 'Deutschland' },
         // initialCountry: "auto",
-        // localizedCountries: { 'de': 'Deutschland' },
         // nationalMode: false,
         // onlyCountries: ['us', 'gb', 'ch', 'ca', 'do'],
         // placeholderNumberType: "MOBILE",
