Rename customContainer option to containerClass

--- a/demo.html
+++ b/demo.html
@@ -22,8 +22,8 @@
         // allowDropdown: false,
         // autoInsertDialCode: true,
         // autoPlaceholder: "off",
+        // containerClass: "test",
         // countrySearch: true,
-        // customContainer: "test",
         // customPlaceholder: function(selectedCountryPlaceholder, selectedCountryData) {
         //   return "e.g. " + selectedCountryPlaceholder;
         // },
