--- a/demo.html
+++ b/demo.html
@@ -44,8 +44,8 @@
         // onlyCountries: ['us', 'gb', 'ch', 'ca', 'do'],
         // placeholderNumberType: "MOBILE",
         // preferredCountries: ['cn', 'jp'],
-        // separateDialCode: true,
         // showFlags: false,
+        // showSelectedDialCode: true,
         // useFullscreenPopup: true,
         utilsScript: "build/js/utils.js"
       });
