--- a/spec.html
+++ b/spec.html
@@ -78,6 +78,8 @@
   
   <script src="src/spec/tests/options/containerClass.js"></script>
   
+  <script src="src/spec/tests/options/countrySearch.js"></script>
+  
   <script src="src/spec/tests/options/customPlaceholder.js"></script>
   
   <script src="src/spec/tests/options/dropdownContainer.js"></script>
