Default demo country

--- a/demo.html
+++ b/demo.html
@@ -39,7 +39,7 @@
         // },
         // hiddenInput: () => "phone_full",
         // i18n: { 'de': 'Deutschland' },
-        // initialCountry: "auto",
+        initialCountry: "gb",
         // nationalMode: false,
         // onlyCountries: ['us', 'gb', 'ch', 'ca', 'do'],
         // placeholderNumberType: "MOBILE",
