--- a/demo.html
+++ b/demo.html
@@ -11,7 +11,7 @@
   <body>
     <h1>International Telephone Input</h1>
     <form>
-      <input id="phone" name="phone" type="tel" />
+      <input id="phone" name="phone" type="tel" value="" />
       <button type="submit">Submit</button>
     </form>
 
@@ -30,6 +30,7 @@
         // dropdownContainer: document.querySelector('#custom-container'),
         // excludeCountries: ["us"],
         // fixDropdownWidth: true,
+        // formatAsYouType: false,
         // formatOnDisplay: false,
         // geoIpLookup: function(callback) {
         //   fetch("https://ipapi.co/json")
@@ -39,7 +40,7 @@
         // },
         // hiddenInput: () => "phone_full",
         // i18n: { 'de': 'Deutschland' },
-        initialCountry: "gb",
+        initialCountry: "us",
         // nationalMode: false,
         // onlyCountries: ['us', 'gb', 'ch', 'ca', 'do'],
         // placeholderNumberType: "MOBILE",
