--- a/react/demo/index.html
+++ b/react/demo/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>IntlTelInput React Component</title>
-  <link rel="stylesheet" href="../build/css/intlTelInput.css" />
-  <link rel="stylesheet" href="../build/css/demo.css" />
+  <link rel="stylesheet" href="../../build/css/intlTelInput.css" />
+  <link rel="stylesheet" href="../../build/css/demo.css" />
 </head>
 
 <body>
