Add a 2nd simple demo

--- a/react/demo/simple.html
+++ b/react/demo/simple.html
@@ -12,7 +12,7 @@
 <body>
   <h1>IntlTelInput React Component</h1>
   <div id="app"></div>
-  <script src="./demo-bundle.js"></script>
+  <script src="./simple-bundle.js"></script>
 </body>
 
 </html>
