--- a/demo.html
+++ b/demo.html
@@ -23,13 +23,13 @@
         // autoInsertDialCode: true,
         // autoPlaceholder: "off",
         // containerClass: "test",
-        // countrySearch: true,
+        // countrySearch: false,
         // customPlaceholder: function(selectedCountryPlaceholder, selectedCountryData) {
         //   return "e.g. " + selectedCountryPlaceholder;
         // },
         // dropdownContainer: document.querySelector('#custom-container'),
         // excludeCountries: ["us"],
-        // fixDropdownWidth: true,
+        // fixDropdownWidth: false,
         // formatAsYouType: false,
         // formatOnDisplay: false,
         // geoIpLookup: function(callback) {
