--- a/react/demo/simple.html
+++ b/react/demo/simple.html
@@ -4,13 +4,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>IntlTelInput React Component</title>
+  <title>React App - Simple Demo</title>
   <link rel="stylesheet" href="../../build/css/intlTelInput.css" />
   <link rel="stylesheet" href="../../build/css/demo.css" />
 </head>
 
 <body>
-  <h1>IntlTelInput React Component</h1>
+  <h1>React App - Simple Demo</h1>
+  <p>A simple react app, using the IntlTelInput component to handle phone number entry.</p>
   <div id="app"></div>
   <script src="./simple-bundle.js"></script>
 </body>
