fix: Handle brackets in hidden input name when adding '_country' suffix

--- a/spec.html
+++ b/spec.html
@@ -90,6 +90,8 @@
   
   <script src="src/spec/tests/options/geoIpLookup.js"></script>
   
+  <script src="src/spec/tests/options/hiddenInput.js"></script>
+  
   <script src="src/spec/tests/options/initialCountry.js"></script>
   
   <script src="src/spec/tests/options/nationalMode.js"></script>
