--- a/demo.html
+++ b/demo.html
@@ -27,6 +27,7 @@
         // customPlaceholder: function(selectedCountryPlaceholder, selectedCountryData) {
         //   return "e.g. " + selectedCountryPlaceholder;
         // },
+        // defaultToFirstCountry: false,
         // dropdownContainer: document.querySelector('#custom-container'),
         // excludeCountries: ["us"],
         // fixDropdownWidth: false,
@@ -36,7 +37,7 @@
         //   fetch("https://ipapi.co/json")
         //     .then(function(res) { return res.json(); })
         //     .then(function(data) { callback(data.country_code); })
-        //     .catch(function() { callback("us"); });
+        //     .catch(function() { callback(); });
         // },
         // hiddenInput: () => "phone_full",
         // i18n: { 'de': 'Deutschland' },
