--- a/demo.html
+++ b/demo.html
@@ -11,7 +11,7 @@
   <body>
     <h1>International Telephone Input</h1>
     <form>
-      <input id="phone" name="phone" type="tel" value="" />
+      <input id="phone" name="phone" type="tel" value="07947692916" />
       <button type="submit">Submit</button>
     </form>
 
@@ -27,7 +27,7 @@
         // customPlaceholder: function(selectedCountryPlaceholder, selectedCountryData) {
         //   return "e.g. " + selectedCountryPlaceholder;
         // },
-        // defaultToFirstCountry: false,
+        defaultToFirstCountry: false,
         // dropdownContainer: document.querySelector('#custom-container'),
         // excludeCountries: ["us"],
         // fixDropdownWidth: false,
@@ -41,7 +41,7 @@
         // },
         // hiddenInput: () => "phone_full",
         // i18n: { 'de': 'Deutschland' },
-        initialCountry: "us",
+        // initialCountry: "us",
         // nationalMode: false,
         // onlyCountries: ['us', 'gb', 'ch', 'ca', 'do'],
         // placeholderNumberType: "MOBILE",
