--- a/demo.html
+++ b/demo.html
@@ -11,7 +11,7 @@
   <body>
     <h1>International Telephone Input</h1>
     <form>
-      <input id="phone" name="phone" type="tel" value="07947692916" />
+      <input id="phone" name="phone" type="tel" value="" />
       <button type="submit">Submit</button>
     </form>
 
