Trigger travis build

--- a/demo.html
+++ b/demo.html
@@ -49,7 +49,7 @@
         // showFlags: false,
         // showSelectedDialCode: true,
         // useFullscreenPopup: true,
-        utilsScript: "build/js/utils.js"
+        utilsScript: "build/js/utils.js",
       });
     </script>
   </body>
