--- a/demo.html
+++ b/demo.html
@@ -46,6 +46,7 @@
         // preferredCountries: ['cn', 'jp'],
         // showFlags: false,
         // showSelectedDialCode: true,
+        // strictMode: true,
         // useFullscreenPopup: true,
         utilsScript: "build/js/utils.js",
       });
