Switch selected-flag div to button

--- a/demo.html
+++ b/demo.html
@@ -12,7 +12,7 @@
     <h1>International Telephone Input</h1>
     <form>
       <input id="phone" name="phone" type="tel" value="" />
-      <button type="submit">Submit</button>
+      <button class="button" type="submit">Submit</button>
     </form>
 
     <script src="build/js/intlTelInput.js"></script>
