--- a/demo.html
+++ b/demo.html
@@ -17,7 +17,7 @@
 
     <script src="build/js/intlTelInput.js"></script>
     <script>
-      var input = document.querySelector("#phone");
+      const input = document.querySelector("#phone");
       window.intlTelInput(input, {
         // allowDropdown: false,
         // autoPlaceholder: "off",
