--- a/demo.html
+++ b/demo.html
@@ -45,7 +45,7 @@
         // placeholderNumberType: "MOBILE",
         // preferredCountries: ['cn', 'jp'],
         // showFlags: false,
-        // showSelectedDialCode: true,
+        // separateDialCode: true,
         // strictMode: true,
         // useFullscreenPopup: true,
         utilsScript: "build/js/utils.js",
