--- a/demo.html
+++ b/demo.html
@@ -22,6 +22,7 @@
         // allowDropdown: false,
         // autoPlaceholder: "off",
         // containerClass: "test",
+        // countryOrder: ["jp", "kr"],
         // customPlaceholder: function(selectedCountryPlaceholder, selectedCountryData) {
         //   return "e.g. " + selectedCountryPlaceholder;
         // },
