Switch to loading utils via dynamic import

--- a/demo.html
+++ b/demo.html
@@ -47,7 +47,7 @@
         // separateDialCode: true,
         // strictMode: true,
         // useFullscreenPopup: true,
-        utilsScript: "build/js/utils.js",
+        utilsScript: "/build/js/utils.js", // leading slash (and http-server) required for this to work in chrome
       }); 
     </script>
   </body>
