Fix/comment tests

--- a/spec.html
+++ b/spec.html
@@ -28,9 +28,7 @@
   
   <script src="src/spec/helpers/helpers.js"></script>
   
-  <script src="build/js/intlTelInput.min.js"></script>
-  
-  <script src="build/js/utils.js"></script>
+  <script src="build/js/intlTelInputWithUtils.min.js"></script>
   
   <script src="src/spec/tests/core/closecountrydropdownEvent.js"></script>
   
