Wrap utils in IIFE to prevent var name clashes with plugin code

--- a/demo.html
+++ b/demo.html
@@ -15,7 +15,7 @@
       <button class="button" type="submit">Submit</button>
     </form>
 
-    <script src="build/js/intlTelInput.js"></script>
+    <script src="build/js/intlTelInputWithUtils.js"></script>
     <script>
       const input = document.querySelector("#phone");
       window.intlTelInput(input, {
@@ -47,7 +47,7 @@
         // separateDialCode: true,
         // strictMode: true,
         // useFullscreenPopup: true,
-        utilsScript: "/build/js/utils.js", // leading slash (and http-server) required for this to work in chrome
+        // utilsScript: "/build/js/utils.js", // leading slash (and http-server) required for this to work in chrome
       }); 
     </script>
   </body>
