--- a/demo.html
+++ b/demo.html
@@ -48,6 +48,7 @@
         // strictMode: true,
         // useFullscreenPopup: true,
         // utilsScript: "/build/js/utils.js", // leading slash (and http-server) required for this to work in chrome
+        // validationNumberType: null,
       }); 
     </script>
   </body>
