Re-add countrySearch option

--- a/demo.html
+++ b/demo.html
@@ -23,6 +23,7 @@
         // autoPlaceholder: "off",
         // containerClass: "test",
         // countryOrder: ["jp", "kr"],
+        // countrySearch: false,
         // customPlaceholder: function(selectedCountryPlaceholder, selectedCountryData) {
         //   return "e.g. " + selectedCountryPlaceholder;
         // },
