add css in demo html

--- a/demo.html
+++ b/demo.html
@@ -6,6 +6,7 @@
     <title>International Telephone Input</title>
     <link rel="stylesheet" href="build/css/intlTelInput.css" />
     <link rel="stylesheet" href="build/css/demo.css" />
+    <link rel="stylesheet" href="build/css/flag-icons.min.css" />
   </head>
 
   <body>
