--- a/react/demo/toggle-disabled.html
+++ b/react/demo/toggle-disabled.html
@@ -7,6 +7,7 @@
   <title>React App - Validation Demo</title>
   <link rel="stylesheet" href="../../build/css/intlTelInput.css" />
   <link rel="stylesheet" href="../../build/css/demo.css" />
+  <link rel="stylesheet" href="../../build/css/flag-icons.min.css" />
 </head>
 
 <body>
