--- a/demo.html
+++ b/demo.html
@@ -50,7 +50,7 @@
         // separateDialCode: true,
         // strictMode: true,
         // useFullscreenPopup: true,
-        // utilsScript: "/build/js/utils.js", // leading slash (and http-server) required for this to work in chrome
+        // loadUtilsOnInit: "/build/js/utils.js", // leading slash (and http-server) required for this to work in chrome
         // validationNumberType: null,
       });
       window.iti = iti; // useful for testing
