BREAKING: validationNumberType now validationNumberTypes (array)

--- a/demo.html
+++ b/demo.html
@@ -51,7 +51,7 @@
         // strictMode: true,
         // useFullscreenPopup: true,
         // loadUtilsOnInit: "/build/js/utils.js", // leading slash (and http-server) required for this to work in chrome
-        // validationNumberType: null,
+        // validationNumberTypes: null,
       });
       window.iti = iti; // useful for testing
 
